ch3/kubernetes/alb-example/sample-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: sample-app-pods
    spec:
      containers:
        - name: sample-app
          image: 866409327334.dkr.ecr.eu-central-1.amazonaws.com/sample-app:v4
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: sample-app-pods
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
