ch3/kubernetes/alb-example/sample-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
spec:
  type: ClusterIP
  selector:
    app: sample-app-pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
